src/main/java/cqlDescriptionJakubRefactor.jj
options {
	STATIC = false;
} 

PARSER_BEGIN(CQLParser)
import model.SensorData;

import java.io.Reader;
import java.io.StringReader;
import java.util.stream.Stream;

public class CQLParser {
	private Stream<SensorData> outputStream;
	private Stream<SensorData> inputDataStream;

    public CQLParser(String query, Stream<SensorData> inputDataStream) {
        this((Reader)(new StringReader(query)));
		this.inputDataStream = inputDataStream;
    }
}
PARSER_END(CQLParser)
SKIP :
{
        " "
        | "\t"
        | "\r"
        | "\n"
}
TOKEN: /*RESERVED TOKENS FOR UQL */
{
           <SELECT: "SELECT" | "select">
        |  <STAR:  "*">
        |  <FROM: "FROM" | "from">
        |  <WHERE: "WHERE" | "where">
		|  <AND: "AND" | "and">
		|  <OR: "OR" | "or">
        |  <AVG: "AVG" | "avg">
        |  <SUM: "SUM" | "sum">
        |  <LPAREN: "(">
        |  <RPAREN: ")">
        |  <EQUALS: "=">
        |  <COMMA: ",">
        |  <LOWER: "<">
		|  <GRATER: ">">
		|  <LESSEREQUAL: "<=">
		|  <GRATEREQUAL: ">=">
		|  <WINDOW: "[RANGE " (["0"-"9"])+"]">
		|  <NUMBER: (["0"-"9"])+>
        |  <STRING: (["A"-"Z", "a"-"z", "0"-"9"])+ >
		|  <STRINGCOMMA: (["A"-"Z", "a"-"z", "0"-"9"])+"," >
        |  <QUOTED_STRING: "\"" (~["\""])+ "\"" >
}

Stream<SensorData> parse() :
{
}
{            
	selection() fromWhere() (withCondition())? <EOF>
	{
		int a = 5;
		String throwBack = "throwback";
		return this.outputStream; 
	}
}

void selection() :
{

}
{
    <SELECT> Attr()
}

void Attr() :
{
}
{
    (aggregation() | <STAR> | <STRING>)?
    (
      LOOKAHEAD(2)  <COMMA> Attr()
    )*
}


void aggregation() :
{
}
{
	(<AVG> | <SUM>) <LPAREN> <STRING> <RPAREN>
}
void fromWhere() :
{
}
{
	<FROM> <STRING> (<WINDOW>)?
}
void withCondition() :
{
}
{
	<WHERE> condition() ((<OR> | <AND>) condition())*
}
void condition() :
{
}
{
	<STRING> (<EQUALS> | <LOWER> | <GRATER> | <LESSEREQUAL> | <GRATEREQUAL>) <NUMBER>
}
